Fixed whitespace on the right side of the mobile viewport

--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,5 @@ img {
 .btn-block{
     width: 50%;
 }
+
+html, body { overflow-x: hidden; }
